# civicelections

./: AGENTS.md  CHANGELOG.md  MILESTONE_0_7_DONE.md  PRODUCTION_DEPTH_ELECTION_WORKPAPER_PERSISTENCE_DONE.md  README.md  README.txt  USER-MANUAL.md  USER-MANUAL.txt  pyproject.toml
civicelections/: __init__.py  accessibility.py  ballot.py  candidate.py  canvass.py  finance.py  guidance.py  main.py  persistence.py  public_ui.py  training.py
docs/: IMPLEMENTATION_PLAN.md  MILESTONES.md  RECONCILIATION.md  architecture.md  browser-qa-civicelections-v0.1.1-alignment-summary.md  browser-qa-production-depth-election-workpaper-persistence-summary.md  browser-qa-summary.md  github-discussions-seed.md  index.html
scripts/: check-civiccore-placeholder-imports.py  verify-docs.sh  verify-release.sh
tests/: test_civicelections_foundation.py  test_production_depth_election_persistence.py  test_runtime_foundation.py
