[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "civicelections"
version = "0.1.1"
description = "CivicElections foundation for voter guidance, candidate filing checklists, training Q&A, ballot summary drafts, and canvass support."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [{ name = "CivicSuite contributors" }]
dependencies = ["civiccore==0.3.0", "fastapi>=0.115.0,<1.0.0", "sqlalchemy>=2.0.0,<3.0.0", "uvicorn[standard]>=0.30.0,<1.0.0"]

[project.optional-dependencies]
dev = ["build>=1.2.0,<2.0.0", "httpx>=0.27.0,<1.0.0", "psycopg2-binary>=2.9.0,<3.0.0", "pytest>=8.0.0,<9.0.0", "ruff>=0.11.0"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["civicelections"]

[tool.hatch.build.targets.sdist]
include = ["civicelections", "scripts", "tests", "README.md", "CHANGELOG.md", "USER-MANUAL.md", "LICENSE-CODE", "LICENSE-DOCS"]

[tool.ruff]
target-version = "py311"
line-length = 100
